- rename misleading update message - fix analyzer warning